--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,3 +1,9 @@
 @import './common';
 @import './example';
 @import './container';
+@import './normalize';
+@import './tags';
+@import './variables';
+
+
+
