--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,9 +1,8 @@
+@import './mixins';
 @import './common';
 @import './example';
 @import './container';
 @import './normalize';
 @import './tags';
 @import './variables';
-
-
-
+@import './footer.scss';
