Первый спринт. Хиро без навигации от Дениса
Сделал первую версию верстки хиро части, необходимо будет вставить часть навигации от Дениса
+позже исправлю мелкие фиксы для таблетки и декстопа, пока кнопка с свг стрелкой не хочет нормально становиться

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -21,3 +21,6 @@ $greyBackG: #E1E1E1;
 // lines (меню хедера и цитаты)
 $pinkLine: #E18298;
 $greyLine: #E5E5E5;
+
+// время перехода
+$cubic: cubic-bezier(0.4, 0, 0.2, 1);
