finished about section for mobile

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,8 +4,9 @@
 @import './normalize';
 @import './tags';
 @import './variables';
+@import './mixins';
 
 // about section
-@import './about'
+@import './about';
 
 
