--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -5,12 +5,13 @@
             <h1 class="about-section__title">how it’s made?</h1>
         </div>
         <div class="about-section__info">
-        <picture>
+            <div class="about-section__img-thumb">
+            <picture>
             <source srcset="./images/bigecocow-mobile.png 1x, ./images/bigecocow-mobile@x2.png 2x"
                 media="(min-width: 320px)">
             <img src="./images/bigecocow-mobile.png" alt="cow" width="280" height="280">
-        </picture>
-
+        </picture>    
+            </div>
         <div class="about-section__main-text">
         <p class="about-section__text">
             Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget,
@@ -27,13 +28,13 @@
         <span class="about-section__description paragraph">
         Aliquam erat volutpat. Aenean accumsan.
         </span>
-    </div>
-        <button type="button" class="about-section__button"> Read more 
+    
+        <button type="button" class="about-section__button about-section__button-text"> Read more 
             <svg class="about-section__button-icon" width="6" height="8">
-                <use href="./images/icon/svg-all.svg#icon-btn-arrow"></use>
+                <use href="./images/icon/svg-all.svg#about-arrow"></use>
             </svg>
         </button>
-
+        </div>
         </div>
         
     </div>
