--- a/src/sass/_tags.scss
+++ b/src/sass/_tags.scss
@@ -6,7 +6,7 @@ body {
 
 img {
   display: block;
-  width: 100%;
+  max-width: 100%;
   height: auto;
 }
 
@@ -16,7 +16,13 @@ ul {
   margin: 0px;
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
   margin: 0;
   padding: 0;
 }
