--- a/src/sass/_advantages.scss
+++ b/src/sass/_advantages.scss
@@ -1,21 +1,25 @@
 .advantages {
   background-color: $pinkLightBackG;
+  padding-top: 40px;
+  padding-bottom: 80px;
 }
-.visually-hidden {
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  margin: -1px;
-}
+// .visually-hidden {
+//   position: absolute;
+//   white-space: nowrap;
+//   width: 1px;
+//   height: 1px;
+//   overflow: hidden;
+//   border: 0;
+//   padding: 0;
+//   clip: rect(0 0 0 0);
+//   clip-path: inset(50%);
+//   margin: -1px;
+// }
 .advantage-list__item {
-  margin-bottom: 32px;
   max-width: 230px;
+}
+.advantage-list__item:not(:last-child) {
+  margin-bottom: 32px;
 }
 .advantage-list__title {
   font-family: 'Titan One';
@@ -28,15 +32,46 @@
   color: $red;
   margin-bottom: 16px;
 }
-.advantage-list__title::before {
+.advantage-list__item::before {
   display: block;
   content: '';
-  width: 30px;
-  height: 30px;
-  background-image: url(../images/bigecocow-mobile.png);
+  height: 50px;
   background-size: contain;
+  background-repeat: no-repeat;
   margin-bottom: 16px;
 }
+.icon-1::before {
+  background-image: url(../images/advatages-icon-1.png);
+}
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+  .icon-1::before {
+    background-image: url(../images/advatages-icon-1@2x.png);
+  }
+}
+.icon-2::before {
+  background-image: url(../images/advatages-icon-2.png);
+}
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+  .icon-2::before {
+    background-image: url(../images/advatages-icon-2@2x.png);
+  }
+}
+
+.icon-3::before {
+  background-image: url(../images/advatages-icon-3.png);
+}
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+  .icon-3::before {
+    background-image: url(../images/advatages-icon-3@2x.png);
+  }
+}
+
 .advantage-list__text {
   font-family: 'DM Sans';
   font-style: normal;
