--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -8,23 +8,23 @@
   </head>
   <body>
     <!---advantages-->
-    <section class="advantages section">
+    <section class="advantages">
       <div class="container">
         <h2 class="visually-hidden">Advantages</h2>
         <ul class="advantage-list">
-          <li class="advantage-list__item">
+          <li class="advantage-list__item icon-1">
             <h3 class="advantage-list__title">721</h3>
             <p class="advantage-list__text">
               Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
             </p>
           </li>
-          <li class="advantage-list__item">
+          <li class="advantage-list__item icon-2">
             <h3 class="advantage-list__title">16kg</h3>
             <p class="advantage-list__text">
               Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
             </p>
           </li>
-          <li class="advantage-list__item">
+          <li class="advantage-list__item icon-3">
             <h3 class="advantage-list__title">84</h3>
             <p class="advantage-list__text">
               Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
