--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,23 +1,24 @@
 // text
-$red: #D41443;
-$white: #FFFFFF;
-$pink: #FFA5BA;
+$red: #d41443;
+$white: #ffffff;
+$pink: #ffa5ba;
 $black: #000000;
-$grey: #907E82;
+$grey: #907e82;
 
 // button
-$redBtnHoverBackG: #C7133E;
-$whiteBtnHoverBackG: #ECEBEB;
+$redBtnHoverBackG: #c7133e;
+$whiteBtnHoverBackG: #ecebeb;
 
 // backgroud
 
-$pinkBackG: #FFB8CA;
-$pinkLightBackG: #FFF5F6;
-$pinkModalBackG: #E17992;
-$brownBackG: #F0D1A5;
-$greenBackG: #C2E297;
-$greyBackG: #E1E1E1;
+$pinkBackG: #ffb8ca;
+$pinkLightBackG: #fff5f6;
+$pinkModalBackG: #e17992;
+$brownBackG: #f0d1a5;
+$greenBackG: #c2e297;
+$greyBackG: #e1e1e1;
+$greyLightBackG: #fafafa;
 
 // lines (меню хедера и цитаты)
-$pinkLine: #E18298;
-$greyLine: #E5E5E5;
+$pinkLine: #e18298;
+$greyLine: #e5e5e5;
