--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: 767px) {
+@media screen and (max-width: $tabletSecondary) {
   .header-button {
     position: relative;
     z-index: 50;
@@ -26,19 +26,19 @@
     display: block;
   }
 
-  .header-button:hover,
-  .header-button:focus {
-    fill: $white;
+  .header-button__cross:hover,
+  .header-button__cross:focus {
+    fill: $red;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: $tablet) {
   .mobile-container {
     display: none;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: $tabletSecondary) {
   .mobile-container {
     position: fixed;
     z-index: 20;
@@ -55,22 +55,24 @@
   }
 }
 
-@media screen and (max-width: 767px) {
-  .mobile-list__item:not(:last-child) {
-    margin-bottom: 23px;
-  }
-}
-
-@media screen and (max-width: 767px) {
+@media screen and (max-width: $tabletSecondary) {
   .mobile-list__link {
-    font-family: $secondaryFont;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 18px;
     display: flex;
     align-items: center;
 
+    height: 42px;
+
+    font-family: $secondaryFont;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.3;
+
     color: $white;
+    border-top: 1px solid $pinkLine;
+
+    &:last-child {
+      border-bottom: 1px solid $pinkLine;
+    }
   }
 }
 
