--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,5 +5,8 @@
 @import './tags';
 @import './variables';
 
+//breakpoints all
+@import './breakpoints';
+
 //components
 @import './components/header';
