edits after team lead's remarks

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,5 +1,5 @@
 <section class="about-section" id="about">
-    <div class="container">
+    <div class="about-section__container container">
         <div class="about-section__titles">
             <p class="about-section__subtitle">tradition and love</p> 
             <h1 class="about-section__title">how it’s made?</h1>
@@ -21,7 +21,7 @@
         <p class="about-section__description">
         Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in
         imperdiet placerat.
-        Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
+        Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, <br>
         tincidunt.
         </p>
 
