--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -7,8 +7,8 @@
                 <div>
                 <h1 class="hero-header__title">Ice cream<br> made with<br> <span class="hero-header__title--accent">passion</span></h1>
                 <ul class="hero-header__list-btn">
-                    <li class="hero-header__item-btn"><button type="button" class="hero-header__button hero-header__button--red">Products</button></li>
-                    <li class="hero-header__item-btn"><button type="button" class="hero-header__button hero-header__button--white">How it&#39;s made?</button></li>
+                    <li class="hero-header__item-btn"><a href="" class="hero-header__button hero-header__button--red">Products</a></li>
+                    <li class="hero-header__item-btn"><a href="" class="hero-header__button hero-header__button--white">How it&#39;s made?</a></li>
                 </ul>
                 </div>
                 <ul class="hero-header__list-number">
@@ -18,9 +18,9 @@
                 </div>
                 <div class="hero__text-box">
                 <p class="hero__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-                <button type="button" class="hero-header__button hero-header__button--white">
+                <a class="hero-header__button hero-header__button--white" href="">
                     <svg class="hero__icon" width="16" height="16"><use href="./images/icon/svg-all.svg#icon-btn-arrow"></use></svg>
-                </button>
+                </a>
                 </div>
             </div>
         </div>
