--- a/src/sass/_hero-header.scss
+++ b/src/sass/_hero-header.scss
@@ -181,14 +181,13 @@
 .hero-header__button {
     font-size: 8px;
     line-height: 1.25;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     text-align: center;
     padding: 8px 18px;
     border: none;
     border-radius: 20px;
-    cursor: pointer;
-
+    text-decoration: none;
     @media screen and (min-width: 1280px) {
         font-size: 14px;
         line-height: 1.29;
