added img and background

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -5,18 +5,22 @@
         <h2 class="products__title">Products</h2>
         <ul class="products__list">
             <li class="products__item">
-                <div class="products__wrapper">
+                <div class="products__wrapper products__wrapper--fist">
                     <h3 class="products__subtitle">Ice cream</h3>
                     <p class="products__about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
                 </div>
             </li>
             <li class="products__item">
-                <h3 class="products__subtitle">Ice coffee</h3>
-                <p class="products__about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                <div class="products__wrapper products__wrapper--second">
+                    <h3 class="products__subtitle">Ice coffee</h3>
+                    <p class="products__about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                </div> 
             </li>
             <li class="products__item">
-                <h3 class="products__subtitle">Milkshakes</h3>
-                <p class="products__about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                <div class="products__wrapper products__wrapper--third">
+                    <h3 class="products__subtitle">Milkshakes</h3>
+                    <p class="products__about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                </div>   
             </li>
         </ul>
     </div>
