fixed distance between sections

--- a/src/sass/_advantages.scss
+++ b/src/sass/_advantages.scss
@@ -1,6 +1,6 @@
 .advantages {
   background-color: $pinkLightBackG;
-  padding-top: 40px;
+  // padding-top: 40px;
   padding-bottom: 80px;
 }
 .visually-hidden {
