--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,9 +1,9 @@
 .gallery {
   background: linear-gradient($pinkLightBackG 40%, $white 40%);
 }
-.gallery__container {
-  padding: 2vw 0;
-}
+// .gallery__container {
+//   padding: 2vw 0;
+// }
 .gallery__list {
   width: calc(6 * (12.5vw + 5px));
   margin: 0 auto;
