--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -11,6 +11,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  & > img {
+    max-width: 85px;
+    height: auto;
+  }
 }
 .review__desc {
   margin-top: 32px;
@@ -22,7 +26,7 @@
     top: 145px;
     left: 25px;
     border: none;
-    background-image: url(../images/icons/bracket.svg);
+    background-image: url(../images/icon/bracket.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -69,7 +73,7 @@
     top: -16px;
     left: calc(100vw / 2 - 32px);
     border: none;
-    background-image: url(../images/icons/dots.svg);
+    background-image: url(../images/icon/dots.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
