--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -3,8 +3,9 @@
     <ul class="review__list">
       <li class="review__item">
         <img
-          src="./images/minion.png"
-          alt="фото Миньйона"
+          srcset="./images/yana.png 1x, ./images/yana-2x.png 2x"
+          src="./images/yana.png"
+          alt="Photo Yana"
           width="85"
           height="85"
         />
@@ -17,14 +18,15 @@
             </p>
           </div>
           <div class="wrap__name">
-            <h3 class="review__name">Valerian, Zhytomyr</h3>
+            <h3 class="review__name">Yana, Ukraine</h3>
           </div>
         </div>
       </li>
-      <li class="review__item">
+      <!-- <li class="review__item">
         <img
-          src="./images/minion.png"
-          alt="фото Миньйона"
+          srcset="./images/valerian.png 1x, ./images/valerian-2x.png 2x"
+          src="./images/valerian.png"
+          alt="Photo Valerian"
           width="85"
           height="85"
         />
@@ -40,187 +42,7 @@
             <h3 class="review__name">Valerian, Zhytomyr</h3>
           </div>
         </div>
-      </li>
-      <li class="review__item">
-        <img
-          src="./images/minion.png"
-          alt="фото Миньйона"
-          width="85"
-          height="85"
-        />
-        <div class="review__desc">
-          <div class="wrap__text">
-            <p class="review__text">
-              Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-              ipsum primis in nibh vel risus.
-            </p>
-          </div>
-          <div class="wrap__name">
-            <h3 class="review__name">Valerian, Zhytomyr</h3>
-          </div>
-        </div>
-      </li>
-      <li class="review__item">
-        <img
-          src="./images/minion.png"
-          alt="фото Миньйона"
-          width="85"
-          height="85"
-        />
-        <div class="review__desc">
-          <div class="wrap__text">
-            <p class="review__text">
-              Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-              ipsum primis in nibh vel risus.
-            </p>
-          </div>
-          <div class="wrap__name">
-            <h3 class="review__name">Valerian, Zhytomyr</h3>
-          </div>
-        </div>
-      </li>
-      <li class="review__item">
-        <img
-          src="./images/minion.png"
-          alt="фото Миньйона"
-          width="85"
-          height="85"
-        />
-        <div class="review__desc">
-          <div class="wrap__text">
-            <p class="review__text">
-              Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-              ipsum primis in nibh vel risus.
-            </p>
-          </div>
-          <div class="wrap__name">
-            <h3 class="review__name">Valerian, Zhytomyr</h3>
-          </div>
-        </div>
-      </li>
-      <li class="review__item">
-        <img
-          src="./images/minion.png"
-          alt="фото Миньйона"
-          width="85"
-          height="85"
-        />
-        <div class="review__desc">
-          <div class="wrap__text">
-            <p class="review__text">
-              Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-              ipsum primis in nibh vel risus.
-            </p>
-          </div>
-          <div class="wrap__name">
-            <h3 class="review__name">Valerian, Zhytomyr</h3>
-          </div>
-        </div>
-      </li>
-      <li class="review__item">
-        <img
-          src="./images/minion.png"
-          alt="фото Миньйона"
-          width="85"
-          height="85"
-        />
-        <div class="review__desc">
-          <div class="wrap__text">
-            <p class="review__text">
-              Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-              ipsum primis in nibh vel risus.
-            </p>
-          </div>
-          <div class="wrap__name">
-            <h3 class="review__name">Valerian, Zhytomyr</h3>
-          </div>
-        </div>
-      </li>
-      <li class="review__item">
-        <img
-          src="./images/minion.png"
-          alt="фото Миньйона"
-          width="85"
-          height="85"
-        />
-        <div class="review__desc">
-          <div class="wrap__text">
-            <p class="review__text">
-              Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-              ipsum primis in nibh vel risus.
-            </p>
-          </div>
-          <div class="wrap__name">
-            <h3 class="review__name">Valerian, Zhytomyr</h3>
-          </div>
-        </div>
-      </li>
-      <li class="review__item">
-        <img
-          src="./images/minion.png"
-          alt="фото Миньйона"
-          width="85"
-          height="85"
-        />
-        <div class="review__desc">
-          <div class="wrap__text">
-            <p class="review__text">
-              Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-              ipsum primis in nibh vel risus.
-            </p>
-          </div>
-          <div class="wrap__name">
-            <h3 class="review__name">Valerian, Zhytomyr</h3>
-          </div>
-        </div>
-      </li>
-      <li class="review__item">
-        <img
-          src="./images/minion.png"
-          alt="фото Миньйона"
-          width="85"
-          height="85"
-        />
-        <div class="review__desc">
-          <div class="wrap__text">
-            <p class="review__text">
-              Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-              ipsum primis in nibh vel risus.
-            </p>
-          </div>
-          <div class="wrap__name">
-            <h3 class="review__name">Valerian, Zhytomyr</h3>
-          </div>
-        </div>
-      </li>
-      <li class="review__item">
-        <img
-          src="./images/minion.png"
-          alt="фото Миньйона"
-          width="85"
-          height="85"
-        />
-        <div class="review__desc">
-          <div class="wrap__text">
-            <p class="review__text">
-              Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-              ipsum primis in nibh vel risus.
-            </p>
-          </div>
-          <div class="wrap__name">
-            <h3 class="review__name">Valerian, Zhytomyr</h3>
-          </div>
-        </div>
-      </li>
+      </li> -->
     </ul>
   </div>
 </section>
