--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -8,20 +8,38 @@
                 <div class="products__wrapper products__wrapper--fist">
                     <h3 class="products__subtitle">Ice cream</h3>
                     <p class="products__about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                    <button type="button" class="products__description">
+                        <svg  class="products__btn-icon" width="40px" height="40px">
+                            <use href="./images/icon/svg-all.svg#icon-arrow-right"></use>
+                        </svg>
+                    </button>
                 </div>
             </li>
             <li class="products__item">
                 <div class="products__wrapper products__wrapper--second">
                     <h3 class="products__subtitle">Ice coffee</h3>
                     <p class="products__about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                    <button type="button" class="products__description">
+                        <svg  class="products__btn-icon" width="40px" height="40px">
+                            <use href="./images/icon/svg-all.svg#icon-arrow-right"></use>
+                        </svg>
+                    </button>
                 </div> 
             </li>
             <li class="products__item">
                 <div class="products__wrapper products__wrapper--third">
                     <h3 class="products__subtitle">Milkshakes</h3>
                     <p class="products__about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                    <button type="button" class="products__description">
+                        <svg  class="products__btn-icon" width="40px" height="40px">
+                            <use href="./images/icon/svg-all.svg#icon-arrow-right"></use>
+                        </svg>
+                    </button>
                 </div>   
             </li>
         </ul>
+        
+
+        </button>
     </div>
 </section>
