--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,7 +8,7 @@
 
 // about section
 @import './about';
-@import "./hero-header";
+@import './hero-header';
 @import './hidden';
 @import './advantages';
 
@@ -16,4 +16,5 @@
 @import './breakpoints';
 
 //components
-@import './components/header';
+@import './components/mobile-menu';
+@import './components/btn-menu';
