--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -11,38 +11,227 @@
         />
         <div class="review__desc">
           <div class="wrap__text">
-            <p class="review__text">
-              Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+            <article class="review__text">
+              1 Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
               Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
               ipsum primis in nibh vel risus.
-            </p>
+            </article>
           </div>
           <div class="wrap__name">
             <h3 class="review__name">Yana, Ukraine</h3>
           </div>
         </div>
       </li>
-      <!-- <li class="review__item">
+      <li class="review__item">
         <img
-          srcset="./images/valerian.png 1x, ./images/valerian-2x.png 2x"
-          src="./images/valerian.png"
-          alt="Photo Valerian"
+          srcset="./images/yana.png 1x, ./images/yana-2x.png 2x"
+          src="./images/yana.png"
+          alt="Photo Yana"
           width="85"
           height="85"
         />
         <div class="review__desc">
           <div class="wrap__text">
-            <p class="review__text">
-              Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+            <article class="review__text">
+              2 Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
               Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
               ipsum primis in nibh vel risus.
-            </p>
+            </article>
           </div>
           <div class="wrap__name">
-            <h3 class="review__name">Valerian, Zhytomyr</h3>
+            <h3 class="review__name">Yana, Ukraine</h3>
           </div>
         </div>
-      </li> -->
+      </li>
+      <li class="review__item">
+        <img
+          srcset="./images/yana.png 1x, ./images/yana-2x.png 2x"
+          src="./images/yana.png"
+          alt="Photo Yana"
+          width="85"
+          height="85"
+        />
+        <div class="review__desc">
+          <div class="wrap__text">
+            <article class="review__text">
+              3 Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+              ipsum primis in nibh vel risus.
+            </article>
+          </div>
+          <div class="wrap__name">
+            <h3 class="review__name">Yana, Ukraine</h3>
+          </div>
+        </div>
+      </li>
+      <li class="review__item">
+        <img
+          srcset="./images/yana.png 1x, ./images/yana-2x.png 2x"
+          src="./images/yana.png"
+          alt="Photo Yana"
+          width="85"
+          height="85"
+        />
+        <div class="review__desc">
+          <div class="wrap__text">
+            <article class="review__text">
+              4 Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+              ipsum primis in nibh vel risus.
+            </article>
+          </div>
+          <div class="wrap__name">
+            <h3 class="review__name">Yana, Ukraine</h3>
+          </div>
+        </div>
+      </li>
+      <li class="review__item">
+        <img
+          srcset="./images/yana.png 1x, ./images/yana-2x.png 2x"
+          src="./images/yana.png"
+          alt="Photo Yana"
+          width="85"
+          height="85"
+        />
+        <div class="review__desc">
+          <div class="wrap__text">
+            <article class="review__text">
+              5 Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+              ipsum primis in nibh vel risus.
+            </article>
+          </div>
+          <div class="wrap__name">
+            <h3 class="review__name">Yana, Ukraine</h3>
+          </div>
+        </div>
+      </li>
+      <li class="review__item">
+        <img
+          srcset="./images/yana.png 1x, ./images/yana-2x.png 2x"
+          src="./images/yana.png"
+          alt="Photo Yana"
+          width="85"
+          height="85"
+        />
+        <div class="review__desc">
+          <div class="wrap__text">
+            <article class="review__text">
+              6 Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+              ipsum primis in nibh vel risus.
+            </article>
+          </div>
+          <div class="wrap__name">
+            <h3 class="review__name">Yana, Ukraine</h3>
+          </div>
+        </div>
+      </li>
+      <li class="review__item">
+        <img
+          srcset="./images/yana.png 1x, ./images/yana-2x.png 2x"
+          src="./images/yana.png"
+          alt="Photo Yana"
+          width="85"
+          height="85"
+        />
+        <div class="review__desc">
+          <div class="wrap__text">
+            <article class="review__text">
+              7 Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+              ipsum primis in nibh vel risus.
+            </article>
+          </div>
+          <div class="wrap__name">
+            <h3 class="review__name">Yana, Ukraine</h3>
+          </div>
+        </div>
+      </li>
+      <li class="review__item">
+        <img
+          srcset="./images/yana.png 1x, ./images/yana-2x.png 2x"
+          src="./images/yana.png"
+          alt="Photo Yana"
+          width="85"
+          height="85"
+        />
+        <div class="review__desc">
+          <div class="wrap__text">
+            <article class="review__text">
+              8 Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+              ipsum primis in nibh vel risus.
+            </article>
+          </div>
+          <div class="wrap__name">
+            <h3 class="review__name">Yana, Ukraine</h3>
+          </div>
+        </div>
+      </li>
+      <li class="review__item">
+        <img
+          srcset="./images/yana.png 1x, ./images/yana-2x.png 2x"
+          src="./images/yana.png"
+          alt="Photo Yana"
+          width="85"
+          height="85"
+        />
+        <div class="review__desc">
+          <div class="wrap__text">
+            <article class="review__text">
+              9 Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+              ipsum primis in nibh vel risus.
+            </article>
+          </div>
+          <div class="wrap__name">
+            <h3 class="review__name">Yana, Ukraine</h3>
+          </div>
+        </div>
+      </li>
+      <li class="review__item">
+        <img
+          srcset="./images/yana.png 1x, ./images/yana-2x.png 2x"
+          src="./images/yana.png"
+          alt="Photo Yana"
+          width="85"
+          height="85"
+        />
+        <div class="review__desc">
+          <div class="wrap__text">
+            <article class="review__text">
+              10 Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+              ipsum primis in nibh vel risus.
+            </article>
+          </div>
+          <div class="wrap__name">
+            <h3 class="review__name">Yana, Ukraine</h3>
+          </div>
+        </div>
+      </li>
+      <li class="review__item">
+        <img
+          srcset="./images/yana.png 1x, ./images/yana-2x.png 2x"
+          src="./images/yana.png"
+          alt="Photo Yana"
+          width="85"
+          height="85"
+        />
+        <div class="review__desc">
+          <div class="wrap__text">
+            <article class="review__text">
+              11 Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+              ipsum primis in nibh vel risus.
+            </article>
+          </div>
+          <div class="wrap__name">
+            <h3 class="review__name">Yana, Ukraine</h3>
+          </div>
+        </div>
+      </li>
     </ul>
   </div>
 </section>
