--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -16,15 +16,20 @@
     height: auto;
   }
 }
+
+.slick-slide img {
+  margin: 0 auto;
+}
+
 .review__desc {
   margin-top: 32px;
-  width: 100vw;
+  max-width: 100vw;
   height: auto;
   &::before {
     content: '';
     position: absolute;
-    top: 145px;
-    left: 25px;
+    top: 100px;
+    left: 45px;
     border: none;
     background-image: url(../images/icon/bracket.svg);
     background-repeat: no-repeat;
@@ -36,7 +41,7 @@
 }
 
 .wrap__text {
-  padding: 43px 58px 26px 65px;
+  padding: 0 50px;
   background: $greyLightBackG;
   margin-bottom: 36px;
 }
@@ -48,6 +53,7 @@
   line-height: 2.55;
   text-align: center;
   color: $black;
+  padding: 0 20px;
   background: repeating-linear-gradient(
     transparent 0px,
     transparent 27px,
@@ -67,6 +73,7 @@
   line-height: 1.86;
   text-align: center;
   color: $black;
+  margin-bottom: 16px;
   &::before {
     content: '';
     position: absolute;
@@ -81,3 +88,26 @@
     height: 4px;
   }
 }
+
+.slick-dots {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+
+  button {
+    border: 0;
+    font-size: 0;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: #D9D9D9;
+  }
+}
+
+.slick-active button {
+  background: url(/src/images/review.png);
+  border-radius: 0%;
+}
+
+
+
