--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -1,5 +1,5 @@
 .customer-reviews {
-  margin-top: 80px;
+  padding-top: 80px;
   & > .container {
     padding-left: 20px;
     padding-right: 20px;
