--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,6 +1,6 @@
-section {
+.products {
   padding-top: 80px;
-  padding-bottom: 20px;
+  padding-bottom: 40px;
 }
 .products__title {
   display: block;
@@ -37,6 +37,9 @@ section {
 
 .products__item {
   margin-bottom: 140px;
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .products__wrapper {
