removed old header

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -22,5 +22,5 @@
 //components
 @import './components/mobile-menu';
 @import './components/btn-menu';
-@import './components/header';
+// @import './components/header';
 @import './gallery';
