--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -15,34 +15,37 @@
         <address>
           <ul class="socials-footer">
             <li class="socials-footer__item">
-              <a class="socials-footer__link" href="">
+              <a class="socials-footer__link" href="https://github.com/">
                 <svg class="socials__icon" width="32" height="32">
                   <use href="./images/icon/icon.svg#github"></use>
                 </svg>
               </a>
             </li>
             <li class="socials-footer__item">
-              <a class="socials-footer__link" href="">
+              <a
+                class="socials-footer__link"
+                href="https://desktop.telegram.org/"
+              >
                 <svg class="socials__icon" width="32" height="32">
                   <use href="./images/icon/icon.svg#telegram"></use>
                 </svg>
               </a>
             </li>
             <li class="socials-footer__item">
-              <a class="socials-footer__link" href="">
+              <a class="socials-footer__link" href="https://www.facebook.com/">
                 <svg class="socials__icon" width="32" height="32">
                   <use href="./images/icon/icon.svg#facebook"></use>
                 </svg>
               </a>
             </li>
           </ul>
-          <a class="contacts-footer" href="tel:+61 (0) 383 766 284"
+          <a class="contacts-footer" href="tel:+61(0)383766284"
             >Feel free to contact
             <span class="contacts-footer__tel">+61 (0) 383 766 284</span></a
           >
         </address>
       </div>
     </div>
-    <p class="ice-cream-footer">© 2019 - IceCream.<br />All Rights Reserved.</p>
   </div>
+  <p class="ice-cream-footer">© 2019 - IceCream.<br />All Rights Reserved.</p>
 </footer>
