--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,5 @@
 <section class="about-section" id="about">
+    <a name="about"></a>
     <div class="about-section__container container">
         <div class="about-section__titles">
             <p class="about-section__subtitle">tradition and love</p> 
