--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -69,13 +69,13 @@
             </h1>
             <ul class="hero-header__list-btn">
               <li class="hero-header__item-btn">
-                <a href="" class="hero-header__button hero-header__button--red"
+                <a href="#products" class="hero-header__button hero-header__button--red"
                   >Products</a
                 >
               </li>
               <li class="hero-header__item-btn">
                 <a
-                  href=""
+                  href="#about"
                   class="hero-header__button hero-header__button--white"
                   >How it&#39;s made?</a
                 >
@@ -98,10 +98,10 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et
           </p>
-          <a class="hero-header__button hero-header__button--white" href="">
-            <svg class="hero__icon" width="16" height="16">
-              <use href="./images/icon/svg-all.svg#icon-btn-arrow"></use>
-            </svg>
+          <a class="hero-header__button-icon" href="#about">
+            <svg  class="hero-icon">
+              <use href="./images/icon/svg-all.svg#icon-arrow-right"></use>
+          </svg>
           </a>
         </div>
       </div>
