--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,6 +1,7 @@
 
 <section class="products">
-    <div class="container">
+    <a name="products"></a>
+    <div class="container">        
         <p class="products__label">100% natural</p>
         <h2 class="products__title">Products</h2>
         <ul class="products__list">
