added hover and focus for button

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -30,11 +30,13 @@
                 <div class="products__wrapper products__wrapper--third">
                     <h3 class="products__subtitle">Milkshakes</h3>
                     <p class="products__about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
-                    <button type="button" class="products__description">
-                        <svg  class="products__btn-icon" width="40px" height="40px">
-                            <use href="./images/icon/svg-all.svg#icon-arrow-right"></use>
-                        </svg>
-                    </button>
+                    <div class="product__wrapper--desc">
+                        <button type="button" class="products__description">
+                            <svg  class="products__btn-icon" width="40px" height="40px">
+                                <use href="./images/icon/svg-all.svg#icon-arrow-right"></use>
+                            </svg>
+                        </button>
+                    </div>   
                 </div>   
             </li>
         </ul>
