--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -30,8 +30,8 @@
         </span>
     
         <button type="button" class="about-section__button about-section__button-text"> Read more 
-            <svg class="about-section__button-icon" width="6" height="8">
-                <use href="./images/icon/svg-all.svg#about-arrow"></use>
+            <svg class="about-section__button-icon" width="10" height="10">
+                <use href="./images/icon/svg-all.svg#icon-btn-arrow"></use>
             </svg>
         </button>
         </div>
