--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -6,22 +6,23 @@
     background-position: right 0 bottom 215px;
     background-color: $pinkLightBackG;
     background-size: contain;
-    @include mq (retina){
-    background-image: url(../images/milksplash-mobile@x2.png);
+
+    @include mq (retina) {
+        background-image: url(../images/milksplash-mobile@x2.png);
     }
-    
-    &__container{
+
+    &__container {
         max-width: 320px;
     }
 
-    &__titles{
+    &__titles {
         text-align: center;
         width: 200px;
         margin-right: auto;
         margin-left: auto;
     }
 
-    &__subtitle{
+    &__subtitle {
         margin-bottom: 15px;
         font-family: 'Titan One', sans-serif;
         font-weight: 400;
@@ -31,9 +32,9 @@
         text-transform: uppercase;
         color: $pink;
     }
-    
 
-     &__title {
+
+    &__title {
         margin-bottom: 32px;
         font-family: 'Titan One', sans-serif;
         font-weight: 400;
@@ -43,17 +44,17 @@
         letter-spacing: 0.04em;
         text-transform: uppercase;
         color: $red;
-     }
+    }
 
-     &__info{
+    &__info {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-     }
+    }
 
-     &__img-thumb{
-         margin-bottom: 40px;
-     }
+    &__img-thumb {
+        margin-bottom: 40px;
+    }
 
     &__text {
         margin-bottom: 30px;
@@ -65,7 +66,7 @@
         width: 220px;
     }
 
-    &__description{
+    &__description {
         display: block;
         width: 220px;
         margin-bottom: 15px;
@@ -75,38 +76,53 @@
         line-height: 162%;
         color: $grey;
     }
+
     &__description.paragraph {
         margin-bottom: 20px;
     }
 
-    &__button{
-    display: flex;
-    background-color: $white;
-    padding: 14px 30px;
-    border: 0;
-    cursor: pointer;
-    border-radius: 20px;
-    justify-content: center;
-    min-width: 176px;
+    &__button {
+        display: flex;
+        background-color: $white;
+        padding: 14px 30px;
+        border: 0;
+        cursor: pointer;
+        border-radius: 20px;
+        justify-content: center;
+        min-width: 176px;
     }
 
-    &__button-text{
-    font-family: 'DM Sans', sans-serif;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 18px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    color: $red;
-}   
+    // &__button:hover,
+    // &__button:hover {
+    //     background-color: $red;
+    // }
 
-    &__button-icon{
-        fill: $red;
+    &__button-text {
+        font-family: 'DM Sans', sans-serif;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 18px;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        color: $red;
+    }
+
+    // &__button-text:hover,
+    // &__button-text:focus {
+    //     color: $white;
+    // }
+
+    &__button-icon {
+        fill: currentColor;
         margin-left: 14px;
     }
+
+    // &__button-icon:hover,
+    // &__button-icon:focus {
+    //     fill: $white;
+    // }
 
 
 
 }
-    
