--- a/css/index.css
+++ b/css/index.css
@@ -31,6 +31,21 @@
   padding-left: 20px;
   padding-right: 20px;
 }
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
 
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 /*
@@ -315,9 +330,12 @@ h1, h2, h3, h4, h5, h6, p {
   padding: 0;
 }
 
+.footer {
+  background-color: #fff5f6;
+}
+
 .footer-section {
   padding-top: 48px;
-  background-color: #fff5f6;
   border-bottom: 1px solid #e1e1e1;
 }
 
@@ -393,5 +411,4 @@ h1, h2, h3, h4, h5, h6, p {
   color: #978689;
   padding-top: 16px;
   padding-bottom: 20px;
-  background-color: #fff5f6;
 }/*# sourceMappingURL=index.css.map */
