--- a/src/sass/_container.scss
+++ b/src/sass/_container.scss
@@ -3,4 +3,15 @@
   margin: 0 auto;
   padding-left: 20px;
   padding-right: 20px;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
