--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,10 +1,10 @@
+.footer {
+  background-color: #fff5f6;
+}
+
 .footer-section {
   padding-top: 48px;
-  background-color: #fff5f6;
   border-bottom: 1px solid #e1e1e1;
-}
-.footer-container {
-  // border-bottom: 1px solid #e1e1e1;
 }
 
 .socials__icon {
@@ -79,9 +79,4 @@
   color: #978689;
   padding-top: 16px;
   padding-bottom: 20px;
-  background-color: #fff5f6;
 }
-
-// .footer-bottom {
-//   border-bottom: 1px solid #e1e1e1;
-// }
