--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="container footer-section">
+  <div class="container">
     <div class="footer-container">
       <div>
         <ul>
@@ -47,5 +47,7 @@
       </div>
     </div>
   </div>
+
+  <div class="footer-section"></div>
   <p class="ice-cream-footer">© 2019 - IceCream.<br />All Rights Reserved.</p>
 </footer>
