--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -47,7 +47,9 @@
       </div>
     </div>
   </div>
-
   <div class="footer-section"></div>
-  <p class="ice-cream-footer">© 2019 - IceCream.<br />All Rights Reserved.</p>
+  <p class="ice-cream-footer">
+    © 2019 - IceCream.<br />
+    All Rights Reserved.
+  </p>
 </footer>
