--- a/src/sass/_container.scss
+++ b/src/sass/_container.scss
@@ -9,6 +9,8 @@
 
   @media screen and (min-width: 768px) {
     width: 768px;
+    padding-left: 18px;
+    padding-right: 18px;
   }
 
   @media screen and (min-width: 1200px) {
