--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -15,7 +15,7 @@
         <address>
           <ul class="socials-footer">
             <li class="socials-footer__item">
-              <a class="socials-footer__link" href="https://github.com/">
+              <a class="socials-footer__link" href="https://github.com/" target="_blank">
                 <svg class="socials__icon" width="32" height="32">
                   <use href="./images/icon/icon.svg#github"></use>
                 </svg>
@@ -24,7 +24,7 @@
             <li class="socials-footer__item">
               <a
                 class="socials-footer__link"
-                href="https://desktop.telegram.org/"
+                href="https://desktop.telegram.org/" target="_blank"
               >
                 <svg class="socials__icon" width="32" height="32">
                   <use href="./images/icon/icon.svg#telegram"></use>
@@ -32,7 +32,7 @@
               </a>
             </li>
             <li class="socials-footer__item">
-              <a class="socials-footer__link" href="https://www.facebook.com/">
+              <a class="socials-footer__link" href="https://www.facebook.com/" target="_blank">
                 <svg class="socials__icon" width="32" height="32">
                   <use href="./images/icon/icon.svg#facebook"></use>
                 </svg>
