--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -28,8 +28,8 @@
   &::before {
     content: '';
     position: absolute;
-    top: 100px;
-    left: 45px;
+    top: 145px;
+    left: 70px;
     border: none;
     background-image: url(../images/icon/bracket.svg);
     background-repeat: no-repeat;
@@ -41,7 +41,7 @@
 }
 
 .wrap__text {
-  padding: 0 50px;
+  padding: 43px 58px 26px 65px;
   background: $greyLightBackG;
   margin-bottom: 36px;
 }
